fixed: footer not always visible

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,7 @@ body {
 }
 
 body, app-root {
-  overflow: visible;
+  overflow: auto;
 }
 
 html, body {
